--- a/rag.ipynb
+++ b/rag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "id": "e4045a80",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "id": "04421627",
    "metadata": {},
    "outputs": [],
@@ -37,10 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "id": "1c43208d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/manojsimha/MyWorkspace/LLM/LLM/env/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader\n",
     "from llama_index.core.retrievers import VectorIndexRetriever\n",
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "id": "4ad2d079",
    "metadata": {},
    "outputs": [
@@ -59,14 +68,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "Parsing nodes: 100%|██████████| 1/1 [00:00<00:00, 379.75it/s]\n",
-      "\n",
-      "\n",
-      "\u001b[A\u001b[A\n",
-      "\n",
-      "Generating embeddings: 100%|██████████| 2/2 [00:01<00:00,  1.77it/s]\n"
+      "/Users/manojsimha/MyWorkspace/LLM/LLM/env/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Parsing nodes: 100%|██████████| 1/1 [00:00<00:00, 13.03it/s]\n",
+      "Generating embeddings: 100%|██████████| 2/2 [00:01<00:00,  1.65it/s]\n"
      ]
     }
    ],
@@ -78,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "id": "464d3891",
    "metadata": {},
    "outputs": [],
@@ -91,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "id": "da2ed039",
    "metadata": {},
    "outputs": [],
@@ -101,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "id": "4f3c7a81",
    "metadata": {},
    "outputs": [
@@ -112,7 +117,7 @@
       "Final Response: Kolkata Knight Riders\n",
       "______________________________________________________________________\n",
       "Source Node 1/2\n",
-      "Node ID: cb29202d-0e18-4df2-b1a4-d2c29caca3d0\n",
+      "Node ID: 08cc5ca1-07fc-4b48-b866-bce7df951d4e\n",
       "Similarity: 0.848303605813313\n",
       "Text: With each passing season, the IPL continues to push the\n",
       "boundaries of what is possible in the world of cricket, and it remains\n",
@@ -122,7 +127,7 @@
       "titles in their ...\n",
       "______________________________________________________________________\n",
       "Source Node 2/2\n",
-      "Node ID: 9d6356c0-3207-4920-b29b-2cd67130427f\n",
+      "Node ID: 15e66a68-1f6e-4e68-883c-3db4d9f4138b\n",
       "Similarity: 0.8338736038285304\n",
       "Text: Start of IPL The Indian Premier League, popularly known as IPL,\n",
       "is a professional Twenty20 cricket league in India that was founded in\n",
@@ -140,19 +145,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "35419ede",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'VectorStoreIndex' from 'llama_index' (unknown location)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[90], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mos\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpath\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mllama_index\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      3\u001b[0m     VectorStoreIndex,\n\u001b[1;32m      4\u001b[0m     SimpleDirectoryReader,\n\u001b[1;32m      5\u001b[0m     StorageContext,\n\u001b[1;32m      6\u001b[0m     load_index_from_storage,\n\u001b[1;32m      7\u001b[0m )\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# check if storage already exists\u001b[39;00m\n\u001b[1;32m     10\u001b[0m PERSIST_DIR \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./storage\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'VectorStoreIndex' from 'llama_index' (unknown location)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kolkata Knight Riders\n"
      ]
     }
    ],
